fix layout issues

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -352,7 +352,7 @@ template {
 }
 
 .content-view {
-  min-height: 100vh;
+  min-height: calc(100vh - 50px);
 }
 
 h1 {
@@ -395,4 +395,17 @@ p {
   font-size: 14px;
   line-height: 25px;
   font-weight: 400;
+}
+
+/* home route and active route will show in bold as it matches / and /about */
+a.nuxt-link-active {
+  font-weight: bold;
+}
+/* exact link will show the primary color for only the exact matching link */
+a.nuxt-link-exact-active {
+  color: #2ecda7;
+}
+
+a:hover {
+  color: #2ecda7;
 }
